<resources>
    <string name="app_name">App Recycler</string>
    <string name="presentacion">Iniciando aplicación Clase09, bienvenido!!!</string>
    <string name="login">Login</string>
    <string name="usuario">Ingresa usuario</string>
    <string name="contrasena">Ingresa contraseña</string>
    <string name="ingreso">Ingresar</string>
    <string name="acerca">Acerca de</string>
    <string name="salir">Cerrar sesión</string>
    <string name="by">Developed by Yo</string>
    <string name="empty"></string>
    <string name="lista">Listado de productos:</string>
    <string name="prod01">Producto 01</string>
    <string name="prod02">Producto 02</string>
    <string name="prod03">Producto 03</string>
    <string name="prod04">Producto 04</string>
    <string name="prod05">Producto 05</string>
    <string name="prod06">Producto 06</string>
    <string name="prod07">Producto 07</string>
    <string name="prod08">Producto 08</string>
    <string name="prod09">Producto 09</string>
    <string name="prod10">Producto 10</string>
    <string name="prod11">Producto 11</string>
    <string name="prod12">Producto 12</string>
    <string name="acercaDatos">Datos del desarrollador</string>
    <string name="Buscar">Buscar</string>
    <string name="Favorito">Favorito</string>
    <string name="Mostrar">Mostrar</string>
    <string name="Producto">Datos del producto</string>
    <string name="Regresar">Regresar</string>
    <string name="nom">Nombre:</string>
    <string name="guardar">Guardar Datos</string>
    <string name="lista1">Lista Linear</string>
    <string name="lista2">Lista Grid</string>
    <string name="arrastrar">Arrastrar y soltar</string>
    <string name="texto1">Hola</string>
    <string name="texto2">Saludos</string>
    <string name="texto3">Adios</string>
    <string name="drop">Mensaje:</string>
</resources>