<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/itemBuscar"
        android:icon="@android:drawable/ic_menu_search"
        android:title="TODO"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/itemFavorito"
        android:icon="@android:drawable/btn_star_big_on"
        android:title="@string/Favorito"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/itemMostrar"
        android:title="@string/Mostrar" />
    <item
        android:id="@+id/itemAcerca"
        android:title="@string/acerca" />
    <item
        android:id="@+id/itemLista1"
        android:title="@string/lista1" />
    <item
        android:id="@+id/itemLista2"
        android:title="@string/lista2" />
    <item
        android:id="@+id/itemDragDrop"
        android:title="@string/arrastrar" />
    <item
        android:id="@+id/itemSalir"
        android:title="@string/salir" />
</menu>